--- a/src/main/resources/assets/autoubl/autoubl.conf
+++ b/src/main/resources/assets/autoubl/autoubl.conf
@@ -1,10 +1,8 @@
-{
-  "auto-check-interval": 0,
-  "ban-message": "&4You are on the Reddit UHC Universal Ban List:&r {Reason} Case: &9{Case}",
-  "banlist-url": "https://docs.google.com/spreadsheet/ccc?key=0AjACyg1Jc3_GdEhqWU5PTEVHZDVLYWphd2JfaEZXd2c&output=csv",
-  "fields": {
-    "ign": "IGN",
-    "uuid": "UUID"
-  },
-  "timeout": 5
+auto-check-interval=0
+ban-message="&4You are on the Reddit UHC Universal Ban List:&r {Reason} Case: &9{Case}"
+banlist-url="https://docs.google.com/spreadsheet/ccc?key=0AjACyg1Jc3_GdEhqWU5PTEVHZDVLYWphd2JfaEZXd2c&output=csv"
+timeout=5
+fields {
+  ign="IGN"
+  uuid="UUID"
 }
