Added commands to unexempt players and to update the banlist from a remote server

--- a/src/main/resources/assets/autoubl/autoubl.conf
+++ b/src/main/resources/assets/autoubl/autoubl.conf
@@ -1,5 +1,6 @@
 auto-check-interval=0
-ban-message="&4You are on the Reddit UHC Universal Ban List:&r {Reason} Case: &9{Case}"
+# You can add the following properties: case, dateBanned, expiryDate, reason; \n is a line break
+ban-message="You are on the Reddit UHC Universal Ban List! \n\n Reason: ${reason}\n Case: ${case}"
 banlist-url="https://docs.google.com/spreadsheet/ccc?key=0AjACyg1Jc3_GdEhqWU5PTEVHZDVLYWphd2JfaEZXd2c&output=csv"
 timeout=5
 fields {
