Added scheduler, which will automatically start on game initialization

--- a/src/main/resources/assets/autoubl/autoubl.conf
+++ b/src/main/resources/assets/autoubl/autoubl.conf
@@ -1,8 +1,12 @@
+# auto updater inverval in minutes - 0 disables the updater
 auto-check-interval=0
-# You can add the following properties: case, dateBanned, expiryDate, reason; \n is a line break
+# you can add the following properties: case, dateBanned, expiryDate, reason; \n is a line break
 ban-message="You are on the Reddit UHC Universal Ban List! \n\n Reason: ${reason}\n Case: ${case}"
+# ban list will be fetched from this url - needs to be in the csv format
 banlist-url="https://docs.google.com/spreadsheet/ccc?key=0AjACyg1Jc3_GdEhqWU5PTEVHZDVLYWphd2JfaEZXd2c&output=csv"
+# request timeout in seconds
 timeout=5
+# name of the required fields in the given csv file
 fields {
   ign="IGN"
   uuid="UUID"
